; ModuleID = '/home/carl/AnghaBench/h2o/t/00unit/lib/handler/extr_........libhandlerfastcgi.c_errorclose.c'
source_filename = "/home/carl/AnghaBench/h2o/t/00unit/lib/handler/extr_........libhandlerfastcgi.c_errorclose.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_fcgi_generator_t = type { i32*, i64 }

@.str = private unnamed_addr constant [22 x i8] c"Internal Server Error\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.st_fcgi_generator_t*)* @errorclose to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @errorclose(%struct.st_fcgi_generator_t* %0) #0 {
  %2 = alloca %struct.st_fcgi_generator_t*, align 8
  %3 = alloca i32*, align 8
  store %struct.st_fcgi_generator_t* %0, %struct.st_fcgi_generator_t** %2, align 8
  %4 = load %struct.st_fcgi_generator_t*, %struct.st_fcgi_generator_t** %2, align 8
  %5 = getelementptr inbounds %struct.st_fcgi_generator_t, %struct.st_fcgi_generator_t* %4, i32 0, i32 1
  %6 = load i64, i64* %5, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load %struct.st_fcgi_generator_t*, %struct.st_fcgi_generator_t** %2, align 8
  %10 = call i32 @send_eos_and_close(%struct.st_fcgi_generator_t* %9, i32 0)
  br label %19

11:                                               ; preds = %1
  %12 = load %struct.st_fcgi_generator_t*, %struct.st_fcgi_generator_t** %2, align 8
  %13 = getelementptr inbounds %struct.st_fcgi_generator_t, %struct.st_fcgi_generator_t* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  store i32* %14, i32** %3, align 8
  %15 = load %struct.st_fcgi_generator_t*, %struct.st_fcgi_generator_t** %2, align 8
  %16 = call i32 @close_generator(%struct.st_fcgi_generator_t* %15)
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @h2o_send_error_503(i32* %17, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 0)
  br label %19

19:                                               ; preds = %11, %8
  ret void
}

declare dso_local i32 @send_eos_and_close(%struct.st_fcgi_generator_t*, i32) #1

declare dso_local i32 @close_generator(%struct.st_fcgi_generator_t*) #1

declare dso_local i32 @h2o_send_error_503(i32*, i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
